--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,15 +1,24 @@
 .header {
+    background-color: #181C1F;
     height: 7rem;
     margin: 0;
     padding: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 11;
+
+    .header__wrapper {
+        height: 100%;
+        max-width: 1450px;
+        margin: 0 auto;
+    }
 }
 
 .header__content {
-    background-color: #181C1F;
     width: 25%;
     float: left;
     height: 100%;
-    text-align: center;
+    text-align: left;
     min-width: 50px;
 }
 
@@ -33,6 +42,18 @@
     width: 75%;
     height: 100%;
     float: right;
+
+    &:after {
+        background-color: #FF3940;
+        content: '';
+        display: block;
+        height: 7rem;
+        left: 80%;
+        position: fixed;
+        top: 0;
+        width: 1000px;
+        z-index: 0;
+    }
 }
 
 .text-input {
@@ -48,6 +69,8 @@
     padding-left: 4rem;
     color: white;
     font-size: 17px;
+    position: relative;
+    z-index: 1;
 }
 
 .text-input:focus {
@@ -59,11 +82,14 @@
 }
 
 .page-container {
-    margin: 50px;
+    margin: 0 auto;
+    overflow: hidden;
+    max-width: 1450px;
+    padding-top: 90px;
 }
 
 .page-content-header {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     h2 {
         font-size: 2rem;
         font-weight: 400;
