--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -12,5 +16,5 @@ body {
   line-height: 1.6;
   margin: 0;
   padding: 0;
-  position: relative;
+  position: relative; 
 }
